tools/tree-sitter-toy/test/corpus/basic.txt
==================
Basic expressions
==================

1 -2 3.14 true false "hi" 'foo $bar \ comment
[ square [ dup * ] ] def
( dup drop )
{ 'a 1 'b 2 }
#{ 1 2 3 }
| x y |
||
get-or
symmetric-difference
pq-peek
math::answer
'math::answer
require-as

---

(source_file
  (number)
  (number)
  (number)
  (boolean)
  (boolean)
  (string)
  (quoted_symbol
    (symbol_name))
  (var_fetch
    (variable_name))
  (line_comment)
  (block
    (operator)
    (block
      (builtin_word)
      (operator)))
  (builtin_word)
  (list_literal
    (builtin_word)
    (builtin_word))
  (map_literal
    (quoted_symbol
      (symbol_name))
    (number)
    (quoted_symbol
      (symbol_name))
    (number))
  (set_literal
    (number)
    (number)
    (number))
  (var_list
    (word)
    (word))
  (var_list)
  (builtin_word)
  (builtin_word)
  (builtin_word)
  (word)
  (quoted_symbol
    (symbol_name))
  (builtin_word))

==================
String escapes
==================

"line\nquote\"slash\\byte\x3f"

---

(source_file
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

==================
Empty capture in a quotation
==================

[ || ]

---

(source_file
  (block
    (var_list)))
